Ajuste error en transition

--- a/Slides-resposive.html
+++ b/Slides-resposive.html
@@ -133,7 +133,7 @@ const mis_slides = [
   {
     id_sliders: "slider2",
     num_sliders: 2,
-    animacion: false,
+    animacion: true,
     tiempo_slide: 5000,
     velocidad_slide: .6,
     dots: true
