--- a/Slides-resposive.html
+++ b/Slides-resposive.html
@@ -127,7 +127,8 @@ const mis_slides = [
     animacion: false,
     tiempo_slide: 5000,
     velocidad_slide: .6,
-    dots: true
+    dots: true,
+    flechas: true
   },
   // Slide-2
   {
@@ -136,7 +137,8 @@ const mis_slides = [
     animacion: true,
     tiempo_slide: 5000,
     velocidad_slide: .6,
-    dots: true
+    dots: true,
+    flechas: true
   },
   // Slide-3
   {
@@ -145,7 +147,8 @@ const mis_slides = [
     animacion: null,
     tiempo_slide: null,
     velocidad_slide: 1,
-    dots: true
+    dots: true,
+    flechas: true
   },
   // Slide-4
   {
@@ -154,7 +157,8 @@ const mis_slides = [
     animacion: false,
     tiempo_slide: null,
     velocidad_slide: null,
-    dots: true
+    dots: false,
+    flechas: false
   },
 ]
 
