--- a/Slides-resposive.html
+++ b/Slides-resposive.html
@@ -154,9 +154,9 @@ const mis_slides = [
   {
     id_sliders: "slider4",
     num_sliders: 4,
-    animacion: false,
-    tiempo_slide: null,
-    velocidad_slide: null,
+    animacion: true,
+    tiempo_slide: 5000,
+    velocidad_slide: .6,
     dots: false,
     flechas: false
   },
