add config animation type

--- a/Slides-resposive.html
+++ b/Slides-resposive.html
@@ -125,6 +125,7 @@ const mis_slides = [
     id_sliders: "slider1",
     num_sliders: 3,
     animacion: false,
+    tipo_animacion: "ease-out",
     tiempo_slide: 5000,
     velocidad_slide: .6,
     dots: true,
@@ -135,6 +136,7 @@ const mis_slides = [
     id_sliders: "slider2",
     num_sliders: 2,
     animacion: true,
+    tipo_animacion: "ease-out",
     tiempo_slide: 5000,
     velocidad_slide: .6,
     dots: true,
@@ -145,6 +147,7 @@ const mis_slides = [
     id_sliders: "slider3",
     num_sliders: null,
     animacion: null,
+    tipo_animacion: "ease-out",
     tiempo_slide: null,
     velocidad_slide: 1,
     dots: true,
@@ -155,8 +158,9 @@ const mis_slides = [
     id_sliders: "slider4",
     num_sliders: 4,
     animacion: true,
-    tiempo_slide: 5000,
-    velocidad_slide: .6,
+    tipo_animacion: "linear",
+    tiempo_slide: 0.00000001,
+    velocidad_slide: 7,
     dots: false,
     flechas: false
   },
